Fixed navigator jitter on mobile

--- a/src/styles/components/_navigator.scss
+++ b/src/styles/components/_navigator.scss
@@ -1,8 +1,8 @@
 $--padding: 1rem;
 
 .navigator {
-    width: 100dvw;
-    height: 100dvh;
+    width: 100vw;
+    height: 100vh;
     background-color: $--black;
     padding-top: 4rem;
     overflow: hidden;
